# snowcookie

./: CMakeLists.txt  README.md
diagnostic/: CMakeLists.txt  diagnostic.cpp  mainwindow.cpp  mainwindow.h
diagnostic/ui/: mainwindow.ui
docs/: how-to-add-to-startup
edison-board/: CMakeLists.txt  bg_service.h  edison.cpp  logger.h  service_manager.cpp  service_manager.h
edison-board/dataglutton/: CMakeLists.txt  data_parser.cpp  data_parser.h  data_reader.cpp  data_reader.h  data_writer.cpp  data_writer.h  divisor.h  fake_data_provider.cpp  fake_data_provider.h  idata_provider.h  iplug_device.h  log_manager.cpp  log_manager.h  uart_device.cpp  uart_device.h
edison-board/server/: CMakeLists.txt  client_service.cpp  client_service.h  server.cpp  server.h
edison-board/wifi_controller/: CMakeLists.txt  wifi_service.cpp  wifi_service.h
protocol/: CMakeLists.txt  data_parser.cpp  data_parser.h  edison_frame.cpp  edison_frame.h  protocol_utils.cpp  protocol_utils.h
